[gd_scene load_steps=7 format=3 uid="uid://bu83x6x3mossv"]

[ext_resource type="Texture2D" uid="uid://208t5rbymhi4" path="res://assets/music_button_on.png" id="1_3fywr"]
[ext_resource type="Texture2D" uid="uid://crr77ferhx7cw" path="res://assets/music_button_off.png" id="2_8dlpt"]
[ext_resource type="Script" path="res://scripts/mute_button.gd" id="2_rl5bg"]

[sub_resource type="Animation" id="Animation_1ap8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_eg3ov"]
resource_name = "squish"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_738gg"]
_data = {
"RESET": SubResource("Animation_1ap8f"),
"squish": SubResource("Animation_eg3ov")
}

[node name="MuteButton" type="TextureButton"]
offset_right = 48.0
offset_bottom = 48.0
pivot_offset = Vector2(24, 24)
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("1_3fywr")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_rl5bg")
off = ExtResource("2_8dlpt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_738gg")
}
speed_scale = 6.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
